--- a/proba-tehnica-it/src/components/pages/AddRecipe.css
+++ b/proba-tehnica-it/src/components/pages/AddRecipe.css
@@ -1,41 +1,29 @@
 body {
     margin: 0;
-    font-family: Arial, sans-serif;
   }
   
   .add-recipe-container {
     display: flex;
-    justify-content: center;
-    align-items: center;
     height: 100vh;
-    background-color: #f9f9f9;
+    margin: 0;
+    background-color: white;
     overflow: hidden;
+    display: grid;
+    place-items: center;
+    
   }
   
   .add-recipe-box {
     background-color: #001f7f;
-    padding: 30px 40px;
+    padding: 30px 50px;
     border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
+    align-items: center;
     max-width: 400px;
-    z-index: 2;
-  }
-  
-  .form-group {
-    margin-bottom: 20px;
-    text-align: left;
-  }
-  
-  .form-group label {
-    display: block;
-    margin-bottom: 8px;
-    color: white;
   }
   
   .form-group input {
     width: 100%;
-    padding: 10px;
+    padding: 0px;
     border: 1px solid #ccc;
     border-radius: 5px;
   }
