--- a/proba-tehnica-it/src/components/pages/Homepage.css
+++ b/proba-tehnica-it/src/components/pages/Homepage.css
@@ -1,4 +1,180 @@
-.background-image{
-    height: 100%;
-    width: 100%;
+body {
+  margin: 0;
 }
+
+a {
+    color: white;
+}
+  
+.background-image{
+  height: 170vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  padding-top: 80px;
+}
+
+.background-image p{
+  font-size: 70px;
+  color: #36CF56;
+}
+  /* Top Rated Recipes */
+  .top-rated {
+    background: #00236D;
+    color: white;
+    padding: 40px 0%;
+    text-align: center;
+    display: flexbox;
+    width: 100%;
+    align-items: center;
+  }
+  
+  .top-rated h2 {
+    margin-bottom: 10px;
+  }
+  
+  .recipes {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    width: 100%;
+    padding:10px 0%;
+  }
+  
+  .recipe-card {
+    display: flex; 
+    align-items: center; 
+    background-color: #f8f8f8; 
+    border: 5px solid #ddd; 
+    border-radius: 10px; 
+    overflow: hidden;
+    margin: 20px 1%; 
+    max-width: 350px;
+    width: calc(100% - 40px); 
+  }
+  
+  .recipe-image {
+    width: 100%; 
+    height: 150px; 
+    object-fit: cover; 
+  }
+  
+  .recipe-info {
+    padding: 20px; 
+    flex: 1;
+  }
+  
+  .recipe-title {
+    font-size: 1.5rem;
+    color: #00236D;
+    margin-bottom: 10px;
+  }
+  
+  .recipe-author, .rate-cnt{
+    font-size: 1rem;
+    color: #666;
+    margin-bottom: 15px;
+  }
+  
+  .recipe-rating {
+    font-size: 1.2rem;
+    color: #FFA500;
+  }
+
+  
+  /* Contact Section */
+  .contact {
+    width: 100%;
+    padding:20px 0%;
+    text-align: center;
+    display: flexbox;
+  }
+  
+  .contact-header {
+    margin-bottom: 20px;
+    font-size: 3rem;
+    margin-left: 0;
+    color: #36CF56;
+    padding-left: 5%;
+  }
+  
+  /* Form Layout */
+  .contact-form {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    margin-top: 20px;
+    flex-wrap: wrap;
+    padding-left: 5%;
+    padding-right: 10%;
+  }
+  
+  .contact-personal, .contact-message {
+    flex: 1; 
+    max-width:100%; 
+    display: flex;
+    flex-direction: column; 
+    gap: 20px; 
+  }
+  
+  .input-field, .textarea-field {
+    width: 100%;
+    padding: 10px;
+    border: 2px solid #36CF56;
+    border-radius: 5px;
+    font-size: 1rem;
+  }
+  
+  .textarea-field {
+    height: 150px;
+    resize: none;
+  }
+  
+  /* Submit Button */
+  .submit-btn {
+    padding: 10px 20px;
+    background: #36CF56;
+    color: white;
+    border: none;
+    border-radius: 15px;
+    cursor: pointer;
+    font-size: 1rem;
+    align-self: flex-end;
+  }
+  .submit-btn:hover{
+    background-color: #11862b;
+  }
+
+  .footer-background{
+    width: 100%;
+    height: 120px;
+  }
+  
+  .social-icons a {
+    margin: 0 10px;
+    color: white;
+    text-decoration: none;
+  }
+
+  @media (max-width: 768px) {
+    .hero h1 {
+      font-size: 36px;
+    }
+  
+    .recipes {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .contact-header {
+      font-size: 2rem;
+    }
+  
+    .submit-btn {
+      align-self: center;
+    }
+  }
+  
+  
