--- a/proba-tehnica-it/src/components/pages/Login.css
+++ b/proba-tehnica-it/src/components/pages/Login.css
@@ -1,6 +1,10 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .login-container {
@@ -8,15 +12,15 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #f9f9f9;
+  width: 100%;
   overflow: hidden;
+  background-color: white;
 }
 
 .login-box {
-  background-color: #001f7f;
+  background-color: white;
   padding: 30px 40px;
   border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   text-align: center;
   max-width: 400px;
   z-index: 2;
@@ -42,7 +46,7 @@ body {
 .form-group input {
   width: 100%;
   padding: 10px;
-  border: 1px solid #ccc;
+  border: 1px solid white;
   border-radius: 5px;
 }
 
@@ -71,20 +75,4 @@ body {
 
 .forgot-password:hover {
   text-decoration: underline;
-}
-
-.background-illustration {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  z-index: 1;
-}
-
-.background-illustration img {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  max-height: 90%;
-  object-fit: contain;
 }
