--- a/proba-tehnica-it/src/components/pages/Profile.css
+++ b/proba-tehnica-it/src/components/pages/Profile.css
@@ -1,8 +1,7 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    height: 100vh;
-    background-color: #FFFFFF;
+    background-color: #f9f9f9;
   }
   
   .profile-container {
@@ -10,13 +9,11 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    background-color: #f9f9f9;
     position: relative;
   }
   
-
-
   .profile-section {
     display: flex;
     gap: 20px;
@@ -49,7 +46,7 @@ body {
   }
   
   .info-card span {
-    color: white;
+    color: #ffffff;
   }
   
   .add-recipe-button {
